<resources>
    <string name="app_name">Calculadora Básica</string>
    <string name="str_text_num1"> Ingrese el número 1</string>
    <string name="str_text_num2">Ingrese el número 2</string>
    <string name="rbt_suma">Suma</string>
    <string name="rbt_resta">Resta</string>
    <string name="rbt_multiplicacion">Multiplicación</string>
    <string name="rbt_division">División</string>
    <string name="btn_calcular">Calcular</string>
    <string name="out_str_resultado">Resultado</string>
    <string name="double_num1"></string>
    <string name="str_operacion"></string>
    <string name="double_num2"></string>
    <string name="double_respuesta">Ingrese su respuesta</string>
    <string name="btn_resultadoJuego">Verificar</string>
    <string name="str_resultado_juego"></string>
    <string name="imageView3"></string>
    <string name="gano"></string>
    <string name="time">1:00</string>
    <string name="correcto">Correctos: </string>
    <string name="incorrecto">Incorrectos</string>
</resources>