<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="393dp"
        android:layout_height="109dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="27dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/double_num1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/double_num1"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="10dp"
            android:layout_height="46dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/double_num2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/double_num2"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="270dp"
        android:layout_height="158dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="250dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/double_respuesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/double_respuesta"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_resultadoJuego"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_resultadoJuego"
            android:onClick="verificar"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/str_resultado_juego"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_resultado_juego"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/gano"
        android:layout_width="143dp"
        android:layout_height="153dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>